--- a/index.html
+++ b/index.html
@@ -41,5 +41,85 @@
         <a href="#what" class="btn"> Read more! </a>
     </div>
   </header>
+  
+  <!-- Section: what we do -->
+  <section id="what" class="bg-light py-1">
+    <div class="container">
+      <h2 class="m-heading text-center">
+        <span class="text-primary">What</span> We do.
+      </h2>
+      <div class="items">
+        <div class="item">
+          <i class="fas fa-university fa-2x"></i>
+          <h3> Investment Banking </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
+          </p>
+        </div>
+        <div class="item">
+            <i class="fas fa-book-reader fa-2x"></i>
+            <h3> Portfolio Management </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
+            </p>
+        </div>
+        <div class="item">
+            <i class="fas fa-pencil-alt fa-2x"></i>
+            <h3> Tax and Custodial </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
+            </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section : who we are  -->
+  <section class="" id="who">
+    <div class="who-img"></div>
+    <div class="who-text bg-dark p-2 ">
+     <h2 class="m-heading">
+       <span class="text-primary"> Who</span> 
+       We are
+     </h2>
+     <p>
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, ipsam! Dicta itaque, nostrum possimus neque recusandae delectus magnam est nulla dolorum odio eaque, impedit ea, ex culpa ab repellat provident.
+     </p>
+     <h3> Our Team</h3>
+     <ul class="list">
+       <li>Malcolm Smith: CEO</li>
+       <li>Dana Joshner: CFO</li>
+       <li>Brit Cornell: Accountant</li>
+       <li>Ram Anbalagan: Engineering Head</li>
+       <li>Kara Wernick: Senior HR</li>
+     </ul>
+   </div>
+  </section>
+
+  <!-- Section clients -->
+  <section id="clients" class="py-1">
+    <div class="container">
+      <h2 class="m-heading text-center">
+        <span class="text-primary py-1">Our</span>Clients
+      </h2>
+      <div class="items">
+        <div>
+          <img src="./img/logos/logo1.png" alt="logo1">
+        </div>
+        <div>
+            <img src="./img/logos/logo2.png" alt="logo2">
+          </div>
+        <div>
+            <img src="./img/logos/logo3.png" alt="logo3">
+        </div>
+        <div>
+          <img src="./img/logos/logo4.png" alt="logo4">
+        </div>
+        <div>
+          <img src="./img/logos/logo5.png" alt="logo5">
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
