--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           Ledger
     </h1>
     <ul>
-      <li> <a href="#"> Home </a></li>
-      <li> <a href="#"> What </a></li>
-      <li> <a href="#"> Who </a></li>
-      <li> <a href="#"> Contact </a></li>
+      <li> <a href="#home"> Home </a></li>
+      <li> <a href="#what"> What </a></li>
+      <li> <a href="#who"> Who </a></li>
+      <li> <a href="#contact"> Contact </a></li>
     </ul>
   </nav>
 
@@ -121,5 +121,59 @@
       </div>
     </div>
   </section>
+
+  <!-- Contact form -->
+  <section id="contact">
+    <div class="contact-form bg-primary p-2" >
+      <h2 class="m-heading">Contact Us</h2>
+      <p>
+        Please use the form below to contact us
+      </p>
+      <form>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text"  name="name" id="name" placeholder="Enter name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email"  name="email" id="email" placeholder="Enter email"> 
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone</label>
+          <input type="text"  name="phone" id="phone" placeholder="Enter Phone number"> 
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" placeholder="Enter Message"></textarea> 
+        </div>
+        <input type="submit" value="Send" class="btn btn-dark">
+
+    </div>
+    <div class="map"></div>
+  </section>
+
+  <!-- CDN for Jquery  -->
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+
+  <!-- Local JS -->
+  <script src="js/main.js"></script>
+    <!-- Javascript for maps -->
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsX-WZL4WwwDGjQN8HZeAyPnKZ0tChSzk&callback=initMap"
+    async defer></script>
+
+  <!-- Footer -->
+  <footer class="main-footer">
+    <div class="container">
+      <p>
+        Copyright &copy; 2019, FlexLedger, All rights reserved.
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
+
+<!-- AIzaSyCsX-WZL4WwwDGjQN8HZeAyPnKZ0tChSzk -->
