--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" media="screen and (max-width: 768 px)" href="css/mobile.css">
-  <link rel="stylesheet" media="screen and (min-width: 1100 px)" href="css/widesreen.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+  <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
@@ -51,24 +51,30 @@
       <div class="items">
         <div class="item">
           <i class="fas fa-university fa-2x"></i>
-          <h3> Investment Banking </h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
-          </p>
+          <div>
+            <h3> Investment Banking </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
+            </p>
+        </div>
         </div>
         <div class="item">
             <i class="fas fa-book-reader fa-2x"></i>
-            <h3> Portfolio Management </h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
-            </p>
+            <div>
+              <h3> Portfolio Management </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
+              </p>
+            </div>
         </div>
         <div class="item">
             <i class="fas fa-pencil-alt fa-2x"></i>
-            <h3> Tax and Custodial </h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
-            </p>
+            <div>
+              <h3> Tax and Custodial </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsa.
+              </p>
+            </div>
         </div>
       </div>
     </div>
@@ -88,10 +94,10 @@
      <h3> Our Team</h3>
      <ul class="list">
        <li>Malcolm Smith: CEO</li>
-       <li>Dana Joshner: CFO</li>
-       <li>Brit Cornell: Accountant</li>
-       <li>Ram Anbalagan: Engineering Head</li>
-       <li>Kara Wernick: Senior HR</li>
+       <li>Dana KandiGiver: Rave co-ordinater</li>
+       <li>Brit Box : Psy-technician</li>
+       <li>Ram Anbalagan: Intern </li>
+       <li>Kara Warmgiver: Senior People person</li>
      </ul>
    </div>
   </section>
@@ -167,7 +173,7 @@
 
   <!-- Footer -->
   <footer class="main-footer">
-    <div class="container">
+    <div class="container bg-dark text-center">
       <p>
         Copyright &copy; 2019, FlexLedger, All rights reserved.
       </p>
